Enable eeuser module